[metadata]
name = jarn.viewdoc
version = 2.7
description = Python documentation viewer
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = view, rest, rst, package, docs, documentation, rst2html, long-description
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/Jarn/jarn.viewdoc
license = BSD-2-Clause

[options]
packages = find_namespace:
zip_safe = false
install_requires =
    setuptools >= 68.2.2
    docutils >= 0.20.1
    pygments >= 2.16.1
    blessed >= 1.20.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests
    bin
    include
    lib
    lib64

[options.entry_points]
console_scripts =
    viewdoc = jarn.viewdoc.viewdoc:main

[egg_info]
tag_build = dev0
