[metadata]
name = jarn.viewdoc
version = 3.1
description = Python documentation viewer
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = view, rest, rst, package, docs, documentation, rst2html, long-description
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/Jarn/jarn.viewdoc
license = BSD-2-Clause

[options]
packages =
    jarn
    jarn.viewdoc
zip_safe = false
install_requires =
    setuptools >= 75.3.4
    docutils >= 0.20.1
    pygments >= 2.19.2
    blessed >= 1.34.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    viewdoc = jarn.viewdoc.viewdoc:main

[options.extras_require]
testing =
    nose2 >= 0.15.1
    nose2-kflag >= 1.0

[egg_info]
tag_build = dev0
